--- a/app/assets/stylesheets/splash_content.css
+++ b/app/assets/stylesheets/splash_content.css
@@ -2,7 +2,7 @@
   font-family: 'Amatic SC', cursive;
   font-weight: 800;
   font-size: 28px;
-  background-color: white;
+  background-color: #f1f1f1;
   padding: 30px 0px;
   margin: 0;
   border-bottom: 1px solid black;
