--- a/app/assets/stylesheets/auth_modal.css
+++ b/app/assets/stylesheets/auth_modal.css
@@ -1,12 +1,13 @@
 
- .auth-forms {
-   display: block;
-   background-color: lightgrey;
-   border: 1px solid black;
-   float: left;
-   padding: 5px;
-   width: 200px;
-   margin-top: 5px;
+.auth-modal {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+}
+
+.auth-forms {
+   /*padding: 5px;*/
+   position: relative;
  }
 
  .auth-button {
@@ -34,8 +35,9 @@
 
 .auth-modal-text {
   padding: 5px;
-  display: flex;
-  justify-content: flex-end;
+  width: 450px;
+  position: relative;
+  top: 30px;
 }
 
 .auth-modal-text h1 {
@@ -45,4 +47,103 @@
 
 .auth-modal p {
   font-family: 'Open Sans', sans-serif;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+}
+
+
+/*NEW FORMS*/
+
+/* Form */
+.field {
+  position: relative;
+  margin-bottom: 2em;
+}
+.label {
+  bottom: 0;
+  color: #161616;
+  transition: all .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.input {
+  width: 100%;
+  font-size: 100%;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+  height: 2rem;
+  line-height: 2rem;
+  border-bottom: 1px solid #eee;
+  color: #777;
+  transition: all .2s ease-in;
+}
+.input:focus {
+  outline: 0;
+  border-color: #ccc;
+}
+
+/* Using required and a faux pattern to see if input has text from http://stackoverflow.com/questions/16952526/detect-if-an-input-has-text-in-it-using-css */
+.input:focus + .label,
+input:valid + .label {
+  transform: translateY(-100%);
+  font-size: 0.75rem;
+  color: #ccc;
+}
+
+/* Button */
+.btn {
+  border: 0;
+  font-size: 0.75rem;
+  height: 2.5rem;
+  line-height: 2.5rem;
+  padding: 0 1.5rem;
+  color: white;
+  background: #8E49E8;
+  text-transform: uppercase;
+  border-radius: .25rem;
+  letter-spacing: .2em;
+  transition: background .2s;
+}
+.btn:focus {
+  outline: 0;
+}
+.btn:hover,
+.btn:focus {
+  background: #A678E2;
+}
+
+/*Demo Button*/
+.btn-demo {
+  border: 0;
+  font-size: 0.75rem;
+  height: 2.5rem;
+  line-height: 2.5rem;
+  padding: 0 1.5rem;
+  color: #8E49E8;
+  background: #ffffff;
+  text-transform: uppercase;
+  border-radius: .25rem;
+  letter-spacing: .2em;
+  border: 1px solid #8E49E8;
+  transition: background .2s;
+}
+.btn-demo:focus {
+  outline: 0;
+}
+.btn-demo:hover,
+.btn-demo:active {
+  background: #A678E2;
+}
+
+
+/* Intro animation */
+@keyframes intro {
+  from {
+    opacity: 0;
+    top: 0;
+  }
+  to {
+    opacity: 1;
+    top: 50%;
+  }
 }
