--- a/app/assets/stylesheets/header-nav.css
+++ b/app/assets/stylesheets/header-nav.css
@@ -1,5 +1,5 @@
 .nav-bar-placeholder {
-  height: 42px
+  height: 46px
 }
 
 .header {
@@ -9,7 +9,6 @@
   color: #161616;
   background-color: white;
   padding: 0;
-  margin: 0;
   border-bottom: 1px solid black;
 }
 
@@ -17,7 +16,6 @@
   font-size: 32px;
   display: flex;
   justify-content: flex-end;
-  align-items: flex-end;
   list-style: none;
   margin: 0;
 }
@@ -54,28 +52,25 @@
 }
 
 .logo {
-  font-size: 36px;
-  background-color: #3D3C3A;
-  color: #161616;
+  /* in case returned to text rather than image
+  /*font-size: 36px;*/
+  /*background-color: #3D3C3A;*/
+  /*color: #161616;*/
+  /*width: 142px;*/
   float: left;
-  width: 142px;
 }
+
+/*.logo a {
+background-color: #3D3C3A;
+color: #eaeaea;
+text-decoration: none;
+}*/
 
 .logo:hover {
   -webkit-animation: swing 2s ease;
   animation: swing 2s ease;
   -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
-}
-
-.logo a {
-  background-color: #3D3C3A;
-  color: #eaeaea;
-  text-decoration: none;
-}
-
-.logo a:hover {
-  width: 150px;
 }
 
 /*logo swing*/
