--- a/app/assets/stylesheets/auth_modal.css
+++ b/app/assets/stylesheets/auth_modal.css
@@ -76,8 +76,7 @@
 
 }
 .label {
-  bottom: 0;
-  color: ##edede8;
+  color: #edede8;
   transition: all .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 .input {
