--- a/app/assets/stylesheets/header-nav.css
+++ b/app/assets/stylesheets/header-nav.css
@@ -7,12 +7,14 @@
   font-weight: 600;
   font-size: 20px;
   color: #161616;
-  background-color: white;
   padding: 0;
-  border-bottom: 1px solid black;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+
+  background-color: transparent;
+  /*background-color: white;
+  border-bottom: 1px solid black;*/
 }
 
 .nav ul {
