--- a/app/assets/stylesheets/auth_modal.css
+++ b/app/assets/stylesheets/auth_modal.css
@@ -69,6 +69,11 @@
 /*NEW FORMS*/
 
 /* Form */
+
+*, *:after, *:before {
+  box-sizing: border-box;
+}
+
 .field {
   position: relative;
   margin-bottom: 2em;
@@ -77,8 +82,9 @@
 }
 .label {
   color: #edede8;
-  transition: all .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: all 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
+
 .input {
   width: 100%;
   font-size: 100%;
