--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -1,10 +1,9 @@
 footer {
-  position: absolute;
   background-color: #edede8;
   width: 1000px;
   height: 150px;
-  margin-top: 5px;
   font-size: .9em;
+  margin: auto;
 }
 
 .footer-container {
