--- a/app/assets/stylesheets/splash_content.css
+++ b/app/assets/stylesheets/splash_content.css
@@ -1,9 +1,12 @@
 /*Bigger version*/
 .splash-image {
-  padding: 4px 0px 0px 0px;
-  border-bottom: 1px solid black;
-  max-height: 800px;
+  padding: 0px 0px 20px 0px;
+
+  max-height: 600px;
   overflow: hidden;
+  margin: -12px;
+
+  height: auto;
 }
 
 /*Smaller version*/
@@ -15,11 +18,14 @@
 
 /*Bigger version*/
 .splash-image img {
-  /*width: 1000px;*/
-  max-width: 100%;
-  width: 100%;
+  margin: 0;
+
   height: auto;
-  display: block;
+  width: 100%;
+
+  position: relative;
+  top: -180px;
+  z-index: -11;
 }
 
 .splash-content {
@@ -28,8 +34,8 @@
   font-size: 28px;
   background-color: #f1f1f1;
   padding: 30px 0px;
-  margin: 0;
-  border-bottom: 1px solid black;
+  margin-top: 15px;
+  width: 100%;
 }
 
 .splash-content-about {
