--- a/app/assets/stylesheets/start-button.css
+++ b/app/assets/stylesheets/start-button.css
@@ -1,6 +1,6 @@
 /* Container */
 .start-button-container {
-  width: 24em;
+  width: 36em;
   transform: translate(-50%,-50%);
   animation: intro .7s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
 
@@ -9,11 +9,17 @@
   margin-top: -5%;
 
   display: flex;
-  align-items: center;
+  justify-content: space-between;
 }
 
 .start-button-container ul {
   list-style: none;
+}
+
+.start-button-container ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*Start Button*/
@@ -52,10 +58,6 @@
   overflow: hidden;
 
   transition: all 0.5s;
-}
-
-.start-button-container ul li img {
-  padding-left: 42%;
 }
 
 .start-button-words {
