--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -10,6 +10,7 @@ footer {
   padding: 5px;
   display: flex;
   align-items: flex-start;
+  border-top: 1px solid black;
 }
 
 .footer-container p {
