--- a/app/assets/stylesheets/splash_content.css
+++ b/app/assets/stylesheets/splash_content.css
@@ -110,6 +110,13 @@
   animation-iteration-count: 1;
 }
 
+.splash-content ul li a:active ~ .upload-subtext {
+  -webkit-animation: swing 1s ease-in-out;
+  animation: swing 1s ease-in-out;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
+}
+
 .splash-content ul li .upload-subtext {
   color: grey;
 }
