--- a/app/assets/stylesheets/header-nav.css
+++ b/app/assets/stylesheets/header-nav.css
@@ -44,6 +44,10 @@
   transition: .1s background-color;
 }
 
+.nav ul a li {
+  color: #161616;
+}
+
 .user-greeting {
   font-family: 'Open Sans', sans-serif;
   font-size: 0.5em;
