--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,13 @@
   <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-
-
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
   <script type="text/javascript">
     window.cloudinary_options = {
+      theme: 'minimal',
       cloud_name: '<%= ENV['CLOUD_NAME'] %>',
       upload_preset: '<%= ENV['UPLOAD_PRESET'] %>'
     };
