explore page coming together

--- a/app/assets/stylesheets/alt-header-nav.css
+++ b/app/assets/stylesheets/alt-header-nav.css
@@ -1,59 +1,73 @@
 /*Past Header Concept*/
-.top-placeholder {
-  height: 50px;
-  position: absolute;
+.top-placeholder-alt {
+  height: 70px;
+  background-color: transparent;
+  border-bottom: 1px solid lightgrey;
 }
 
-.header {
+nav .header-alt {
+  /*display: flex;
+  justify-content: space-between;
+  align-items: flex-end;*/
+
   font-family: 'Amatic SC', cursive;
   font-weight: 600;
   font-size: 20px;
   color: #161616;
   padding: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  position: absolute;
-  padding: 15px 0px;
 
   background-color: transparent;
   position: relative;
-
-  /*background-color: white;*/
-  /*border-bottom: 1px solid black;*/
+  display: flex;
+  align-items: baseline;
 }
 
-.nav ul {
+.header-alt {
+  padding: 15px 0px;
+  border-bottom: 1px solid lightgrey;
+  
+  display: flex;
+  align-items: baseline;
+}
+
+nav .nav-alt {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 25px;
+  align-items: center;
+}
+
+nav .nav-alt ul {
   font-size: 30px;
   display: flex;
-  justify-content: flex-end;
+  /*justify-content: flex-end;*/
   align-items: flex-end;
   list-style: none;
   margin: 0;
 }
 
-.nav ul li {
+.nav-alt ul li {
   vertical-align: bottom;
   padding: 0px 10px;
 }
 
-.nav ul li:hover {
+.nav-alt ul li:hover {
   background-color: #3D3C3A;
   color: #ffffff;
   cursor: pointer;
   transition: .1s background-color;
 }
 
-.nav ul a li {
+.nav-alt ul a li {
   color: #161616;
 }
 
-.user-greeting {
+.user-greeting-alt {
   font-family: 'Open Sans', sans-serif;
   font-size: 0.5em;
 }
 
-.logo {
+.logo-alt {
   /* in case returned to text rather than image
   /*font-size: 36px;*/
   /*background-color: #3D3C3A;*/
@@ -64,12 +78,12 @@
   margin-left: 4px;
 }
 
-.logo img {
+.logo-alt img {
   height: 45px;
   margin-bottom: -5px;
 }
 
-.logo:hover {
+.logo-alt:hover {
   -webkit-animation: swing 2s ease;
   animation: swing 2s ease;
   -webkit-animation-iteration-count: 1;
