--- a/app/assets/stylesheets/flow.css
+++ b/app/assets/stylesheets/flow.css
@@ -24,6 +24,36 @@ ul .flow-gallery {
   margin: auto;
 }
 
-.gallery-photo {
+.photo-item {
+  position: relative;
+}
 
+.photo-item:hover ~ .like-heart {
+  display: block;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  height: 10%;
+  color: white;
+  opacity: 0.7;
+}
+
+.like-heart {
+  display: block;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  height: 10%;
+  color: white;
+  opacity: 0.1;
+}
+
+.like-heart:hover {
+  display: block;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  height: 10%;
+  color: pink;
+  opacity: 1.0;
 }
