fixing show page

--- a/app/assets/stylesheets/photo_show.css
+++ b/app/assets/stylesheets/photo_show.css
@@ -20,3 +20,12 @@
 .photo-container img {
   max-width: 1000px;
 }
+
+.photo-bottom-padding {
+  height: 70px;
+  background-color: #edede8;
+}
+
+.comments-container {
+  
+}
