--- a/app/assets/stylesheets/flow.css
+++ b/app/assets/stylesheets/flow.css
@@ -35,7 +35,7 @@ ul .flow-gallery {
   right: 10px;
   height: 10%;
   color: white;
-  opacity: 0.7;
+  opacity: 0.5;
 }
 
 .like-heart {
@@ -63,4 +63,5 @@ ul .flow-gallery {
   height: 10%;
   color: pink;
   opacity: 1.0;
+  cursor: pointer;
 }
