--- a/app/assets/stylesheets/splash_content.css
+++ b/app/assets/stylesheets/splash_content.css
@@ -112,6 +112,7 @@
 
 .splash-content ul li .upload-subtext {
   color: grey;
+  cursor: default;
 }
 
 .splash-content ul li .upload-subtext:hover {
