--- a/app/assets/stylesheets/comment-show.css
+++ b/app/assets/stylesheets/comment-show.css
@@ -2,11 +2,29 @@
   font-family: 'Open Sans', sans-serif;
   font-size: 0.4em;
   border-bottom: 1px solid lightgrey;
-  padding: 3px 0px;
+  display: block;
+}
+
+.photo-comment-container {
+  overflow:auto;
 }
 
 .photo-comment .comment-username {
   font-size: 14px;
   font-weight: 800;
-  display: inline;
+  color: #413839;
+  float: left;
+}
+
+.comment-body {
+  float: left;
+}
+
+.comment-time {
+  color: lightgrey;
+  float: right;
+}
+
+.clearfix{
+    clear:both
 }
