--- a/app/assets/stylesheets/start-button.css
+++ b/app/assets/stylesheets/start-button.css
@@ -34,6 +34,7 @@
   display: block;
   /*position: absolute;
   top:15px; right:0; bottom:0; left:40px;*/
+  cursor: default;
 }
 
 .start-button {
@@ -58,6 +59,7 @@
   overflow: hidden;
 
   transition: all 0.5s;
+  cursor: pointer;
 }
 
 .start-button-words {
