explore has comment count, likes, and like count

--- a/app/assets/stylesheets/photo_show.css
+++ b/app/assets/stylesheets/photo_show.css
@@ -21,8 +21,14 @@
   max-width: 1000px;
 }
 
+.big-photo {
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 10px;
+}
+
 .photo-bottom-padding {
-  height: 70px;
+  height: 50px;
   background-color: #edede8;
 }
 
