--- a/app/assets/stylesheets/flow.css
+++ b/app/assets/stylesheets/flow.css
@@ -12,8 +12,13 @@
   padding: 0;
 }
 
-.flow-gallery-container {
+.photo-flow-container img {
 
+}
+
+.flow-gallery-container {
+  width: 1000px;
+  /*margin: auto;*/
 }
 
 .flow-gallery {
@@ -38,24 +43,6 @@ ul .flow-gallery {
   opacity: 0.5;
 }
 
-.like-heart {
-  display: block;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  height: 10%;
-  color: white;
-  opacity: 0.1;
-
-  text-transform: uppercase;
-  text-decoration: none;
-  transform : scale(1,0.8);
-  -webkit-transform:scale(1,0.8); /* Safari and Chrome */
-  -moz-transform:scale(1,0.8); /* Firefox */
-  -ms-transform:scale(1,0.8); /* IE 9+ */
-  -o-transform:scale(1,0.8); /* Opera */
-}
-
 .like-count {
   font-family: 'Open Sans', sans-serif;
   display: inline;
@@ -63,18 +50,94 @@ ul .flow-gallery {
   color: white;
 }
 
-.like-heart:hover {
+/*COMMENT COUNT*/
+
+.comment-count {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 0.5em;
+
+  position: absolute;
+  top: 50px;
+  right: 10px;
+  height: 10%;
+  color: white;
+  opacity: 1;
+}
+
+/*UNLIKED HEART*/
+
+.unliked-like-heart {
+  display: block;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  height: 10%;
+  color: #e5a3ad;
+  opacity: 0.6;
+
+  text-transform: uppercase;
+  text-decoration: none;
+  transform : scale(1,0.85);
+  -webkit-transform:scale(1,0.85); /* Safari and Chrome */
+  -moz-transform:scale(1,0.85); /* Firefox */
+  -ms-transform:scale(1,0.85); /* IE 9+ */
+  -o-transform:scale(1,0.85); /* Opera */
+}
+
+.unliked-like-heart:hover {
   display: block;
   position: absolute;
   top: 10px;
   right: 10px;
   height: 10%;
   color: #ffe9ec;
+  opacity: 1;
+  cursor: pointer;
+}
+
+.unliked-like-heart:active {
+  display: block;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  height: 10%;
+  color: #ffcbd3;
+  opacity: 1.0;
+  cursor: pointer;
+}
+
+/*LIKED HEART*/
+
+.liked-like-heart {
+  display: block;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  height: 10%;
+  color: white;
+  opacity: 0.6;
+
+  text-transform: uppercase;
+  text-decoration: none;
+  transform : scale(1,0.8);
+  -webkit-transform:scale(1,0.85); /* Safari and Chrome */
+  -moz-transform:scale(1,0.85); /* Firefox */
+  -ms-transform:scale(1,0.85); /* IE 9+ */
+  -o-transform:scale(1,0.85); /* Opera */
+}
+
+.liked-like-heart:hover {
+  display: block;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  height: 10%;
+  color: white;
   opacity: 0.8;
   cursor: pointer;
 }
 
-.like-heart:active {
+.liked-like-heart:active {
   display: block;
   position: absolute;
   top: 10px;
