comments good, likes good, explore/flow page margins good

--- a/app/views/static_pages/root.html
+++ b/app/views/static_pages/root.html
@@ -1,5 +1,12 @@
 <div id="content">
-  <div id="loading-spinner">
-    hmmm..
-  </div>
+  <center>
+    <div id="bad-load-logo">
+      <img src="https://40.media.tumblr.com/dcedda1084e9b37cd607016d9be49b69/tumblr_o6ey0nnijK1vns4tpo1_400.png"
+      width="160"/>
+
+    </div>
+      <div id="loading-spinner">
+        hmmm..
+      </div>
+  </center>
 </div>
