--- a/app/assets/stylesheets/comment-show.css
+++ b/app/assets/stylesheets/comment-show.css
@@ -7,7 +7,7 @@
 
 .photo-comment-container {
   overflow: auto;
-  padding-top: 10px;
+  padding-top: 5px;
 }
 
 .photo-comment .comment-username {
@@ -28,4 +28,30 @@
 
 .clearfix{
     clear:both
+}
+
+.like-comment-container {
+  overflow: auto;
+  padding-top: 1px;
+}
+
+.photo-liker {
+  font-size: 0.8em;
+  font-family: 'Open Sans', sans-serif;
+  display: block;
+  float: left;
+}
+
+.photo-liker .liked-by {
+  color: lightgrey;
+  font-size: 0.8em;
+  font-family: 'Open Sans', sans-serif;
+  display: block;
+  float: left;
+}
+
+.like-time {
+  font-size: 0.8em;
+  color: lightgrey;
+  float: right;
 }
