--- a/app/assets/stylesheets/flow.css
+++ b/app/assets/stylesheets/flow.css
@@ -13,7 +13,7 @@
 }
 
 .photo-flow-container img {
-
+  margin: 0px 5px;
 }
 
 .flow-gallery-container {
@@ -62,6 +62,8 @@ ul .flow-gallery {
   height: 10%;
   color: white;
   opacity: 1;
+
+  display: flex;
 }
 
 /*UNLIKED HEART*/
