--- a/app/assets/stylesheets/comment-form.css
+++ b/app/assets/stylesheets/comment-form.css
@@ -2,7 +2,7 @@
   font-family: 'Open Sans', sans-serif;
   font-size: 0.4em;
   border-bottom: 1px solid lightgrey;
-  padding: 30px 0px 10px 0px;
+  padding: 10px 0px 10px 0px;
 }
 
 .comment-form form {
@@ -35,6 +35,7 @@
   padding: 5px;
   transition: background .2s;
   margin: 0px 10px;
+  cursor: pointer;
 }
 .comment-form-button:focus {
   outline: 0;
@@ -46,7 +47,6 @@
 }
 
 /*FACES*/
-
 
 .face-line{
   display: flex;
