--- a/app/assets/stylesheets/tags.css
+++ b/app/assets/stylesheets/tags.css
@@ -1,19 +1,26 @@
+.tags-container {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 10px;
+  margin-top: 8px;
+}
 
 .tag {
-    display: block;
-    overflow: hidden;
-    outline: none;
-    background: #ffffff;
-    color: #000000;
-    border: 1px solid #000000;
-    font-size: 12px;
-    font-family: Helvetica;
-    padding: 5px 10px;
-    box-shadow: 1px 1px 1px 0px #450045;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-    cursor: pointer;
+  display: block;
+  overflow: hidden;
+  outline: none;
+  background: #ffffff;
+  color: #000000;
+  border: 1px solid #000000;
+  font-size: 10px;
+  font-family: 'Open Sans', sans-serif;
+  padding: 5px 10px;
+  box-shadow: 1px 1px 1px 0px #450045;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  margin: 0px 3px;
+  cursor: default;
 }
 
 .tag:hover {
@@ -24,4 +31,25 @@
 
 .tag:active {
   box-shadow: 0px 0px 0px 0px;
+}
+
+/*TAG FORM*/
+.tag-form {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 0.4em;
+  border-bottom: 1px solid lightgrey;
+  padding: 30px 0px 10px 0px;
+  width: 373px;
+}
+
+.tag-form-input {
+  padding: 10px;
+  border: solid 1px #dcdcdc;
+  transition: box-shadow 0.3s, border 0.3s;
+  width: 62%;
+}
+
+.tag-form-input:focus {
+  border: solid 1px #707070;
+  box-shadow: 0 0 5px 1px #969696;
 }
