--- a/app/assets/stylesheets/photo_show.css
+++ b/app/assets/stylesheets/photo_show.css
@@ -18,7 +18,15 @@
 
 .photo-container img {
   /*width: 100%;*/
+  /*max-width: 1000px;*/
+
+  /* width: 100%; */
   max-width: 1000px;
+  /* height: 100%; */
+  max-height: 800px;
+  /* width: auto; */
+  height: auto;
+  height: auto;
 }
 
 .big-photo {
