--- a/app/assets/stylesheets/splash_content.css
+++ b/app/assets/stylesheets/splash_content.css
@@ -39,7 +39,7 @@
 .splash-content-about {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid lightgrey;
   padding: 2px;
 }
 
@@ -47,20 +47,22 @@
   font-family: 'Amatic SC', cursive;
   font-weight: 800;
   font-size: 48px;
+  margin: 25px 0px 25px 0px;
 }
 
 .splash-content-how {
   font-family: 'Amatic SC', cursive;
   font-weight: 800;
   font-size: 52px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid lightgrey;
   position: relative;
 }
 
 .splash-content-how img {
-  margin-bottom: 0px;
+  margin-bottom: 3px;
   width: 1000px;
   position: relative;
+  padding-top: 10px;
 }
 
 .inside-image {
@@ -68,7 +70,18 @@
   top: 30px;
   right: 50px;
   padding: 0px;
-  display: flex;
+}
+
+.inside-image h3 {
+  margin: 0;
+  padding: 0px 20px;
+}
+
+.inside-image p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 0.3em;
+  font-weight: 300;
+  margin: 0;
 }
 
 .splash-content ul {
