--- a/app/assets/stylesheets/flow.css
+++ b/app/assets/stylesheets/flow.css
@@ -2,7 +2,7 @@
   margin: auto;
   width: 1000px;
 
-  background-color: white;
+  lor: white;
   /*z-index: 100;*/
 
   font-family: 'Amatic SC', cursive;
