--- a/app/assets/stylesheets/tags.css
+++ b/app/assets/stylesheets/tags.css
@@ -20,7 +20,7 @@
   -webkit-border-radius: 4px;
   border-radius: 4px;
   margin: 0px 3px;
-  cursor: default;
+  cursor: pointer;
 }
 
 .tag:hover {
